--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "bootstrap": "^4.6.0",
+        "axios": "^0.21.4",
+        "bootstrap": "^4.6.1",
         "jquery": "^3.6",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.14",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
+        "sass": "^1.53.0",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "vue-axios": "^3.4.1",
         "vue-router": "^4.0.16"
     }
 }
