--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
-    "name": "Laravel Package Tutorial",
-    "short_name": "LPT",
+    "name": "Pueblo con Sabor Huejutla",
+    "short_name": "Pueblo con Sabor",
     "start_url": "/index.php",
-    "background_color": "#6777ef",
-    "description": "Tutorial of Laravel Package",
+    "background_color": "#ffff",
+    "description": "Difundir informacion de los platillos tipicos que ofrece la Huasteca Hidalguense",
     "display": "fullscreen",
-    "theme_color": "#6777ef",
+    "theme_color": "#F0640B",
     "icons": [
         {
-            "src": "logo.PNG",
+            "src": "logo.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
