--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,11 +28,7 @@ steps:
 
 - script: composer install --no-interaction --prefer-dist
   displayName: 'composer install'
-
-stages:
-- stage: 'Build'
-  displayName: 'Build the web application'
-  jobs: 
+-- jobs: 
   - job: 'Build'
     displayName: 'Build job'
     pool:
